app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: http-echo
          image: hashicorp/http-echo
          args:
            - "-text=<h1>Versão 2.0</h1>"
          ports:
            - containerPort: 5678
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
