app/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-network-policy
spec:
  podSelector:
    matchLabels:
      app: hello-app  # Altere para a label do seu Deployment
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: traefik  # Exemplo, use a label do seu pod Traefik
